// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact renders if content and contact are passed in 1`] = `
<form
  class="sc-bczRLJ capNoS"
  data-testid="Mobile"
>
  <div>
    <h2
      class="sc-jSMfEi XHSTF"
    >
      test title
    </h2>
    <p>
      test description
    </p>
    <div />
    <div />
    <div />
    <div />
    <input
      class="sc-ftvSup fuNJOj"
      data-testid="Submit"
      disabled=""
      type="submit"
      value="SUBMIT"
    />
    <div
      class="sc-jqUVSM ROQMX"
    >
      <a
        class="sc-kDDrLX bhBXK"
        data-testid="Links"
        href="https://www.github.com/jcpalmer108/"
      >
        <img
          alt="Github"
          class="sc-crXcEl bmFqsm"
          src="[object Object]"
        />
      </a>
      <a
        class="sc-kDDrLX bhBXK"
        data-testid="Links"
        href="https://leetcode.com/darthToaster/"
      >
        <img
          alt="Leetcode"
          class="sc-crXcEl bmFqsm"
          src="[object Object]"
        />
      </a>
    </div>
  </div>
</form>
`;

exports[`Contact renders if content and contact are passed in 2`] = `
<form
  class="sc-gsnTZi hAmbIH"
  data-testid="NotMobile"
>
  <div
    class="sc-dkzDqf cAPcZf"
  >
    <div
      class="sc-gKXOVf kWgHqt"
    >
      <div>
        <div
          class="sc-eCYdqJ UUQIc"
        >
          <h2
            class="sc-jSMfEi XHSTF"
            data-testid="Title"
          >
            test title
          </h2>
          <p
            data-testid="Description"
          >
            test description
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-iBkjds gLdVKR"
    >
      <div
        class="sc-hKMtZM hBpfjV"
      >
        <div />
      </div>
      <div
        class="sc-hKMtZM hBpfjV"
      >
        <div />
      </div>
      <div
        class="sc-hKMtZM hBpfjV"
      >
        <div />
      </div>
      <div
        class="sc-hKMtZM hBpfjV"
      >
        <div />
      </div>
    </div>
  </div>
  <div
    class="sc-papXJ diNUrR"
  >
    <div
      class="sc-jqUVSM ROQMX"
      data-testid="Socials"
    >
      <a
        class="sc-kDDrLX bhBXK"
        href="https://www.github.com/jcpalmer108/"
      >
        <img
          alt="Github"
          class="sc-crXcEl bmFqsm"
          src="[object Object]"
        />
      </a>
      <a
        class="sc-kDDrLX bhBXK"
        href="https://leetcode.com/darthToaster/"
      >
        <img
          alt="Leetcode"
          class="sc-crXcEl bmFqsm"
          src="[object Object]"
        />
      </a>
    </div>
    <input
      class="sc-ftvSup fuNJOj"
      data-testid="Submit"
      disabled=""
      type="submit"
      value="SUBMIT"
    />
  </div>
</form>
`;

exports[`Contact renders if content and contact are passed in 3`] = `
<div
  class="sc-iqcoie dCxMoX"
  data-testid="BlankSection"
/>
`;
